package sokoban.model.cell;

public abstract class GameObject {
    GameObject() {}
}
