package sokoban.model.cell;

public class Ground extends GameObject {
    public Ground() {
        super();
    }
}
