package sokoban.model.cell;

public class Player extends GameObject {
    public Player() {
        super();
    }
}
