package sokoban.model.cell;

public class Wall extends GameObject {
    public Wall() {
        super();
    }
}
